--- a/vignettes/pimeta.Rmd
+++ b/vignettes/pimeta.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "Introduction  the `pimeta` package"
+title: "Introduction to the `pimeta` package"
 author: "Kengo Nagashima"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteIndexEntry{Introduction  the `pimeta` package}
+  %\VignetteIndexEntry{Introduction to the `pimeta` package}
   %\VignetteEncoding{UTF-8}
 ---
 
@@ -25,11 +25,18 @@ pima(y  = sbp$y,      # effect size estimates
 ```
 
 ```
+> # a parametric bootstrap prediction interval
+> set.seed(20161102)
+> pima(y  = sbp$y,      # effect size estimates
++      se = sbp$sigmak, # within studies standard errors
++      B  = 50000       # some options (e.g., number of bootstrap samples)
++ )
+
 Prediction Interval for Random-Effects Meta-Analysis
 
 A parametric bootstrap prediction interval
  Heterogeneity variance: DerSimonian-Laird
- SE for average treatment effect: standard
+ SE for average treatment effect: Hartung
 
 Average treatment effect [95%PI]:
  -0.3341 [-0.8769, 0.2248]
@@ -41,7 +48,7 @@ Heterogeneity variance (tau^2):
  0.0282
 ```
 
-Several type of methods is supported.
+Several type of methods are supported.
 ```r
 # Higgins-Thompson-Spiegelhalter prediction interval
 pima(sbp$y, sbp$sigmak, method = "HTS")
@@ -51,4 +58,62 @@ pima(sbp$y, sbp$sigmak, method = "HK")
 
 # Partlett-Riley prediction interval (Sidik and Jonkman's SE)
 pima(sbp$y, sbp$sigmak, method = "SJ")
+```
+
+```
+> # Higgins-Thompson-Spiegelhalter prediction interval
+> pima(sbp$y, sbp$sigmak, method = "HTS")
+
+Prediction Interval for Random-Effects Meta-Analysis
+
+Higgins-Thompson-Spiegelhalter prediction interval
+ Heterogeneity variance: DerSimonian-Laird
+ SE for average treatment effect: standard
+
+Average treatment effect [95%PI]:
+ -0.3341 [-0.7598, 0.0917]
+
+Average treatment effect [95%CI]:
+ -0.3341 [-0.5068, -0.1613]
+
+Heterogeneity variance (tau^2):
+ 0.0282
+
+> 
+> # Partlett-Riley prediction interval (Hartung and Knapp's SE)
+> pima(sbp$y, sbp$sigmak, method = "HK")
+
+Prediction Interval for Random-Effects Meta-Analysis
+
+Partlett-Riley prediction interval
+ Heterogeneity variance: REML
+ SE for average treatment effect: Hartung-Knapp
+
+Average treatment effect [95%PI]:
+ -0.3287 [-0.9887, 0.3312]
+
+Average treatment effect [95%CI]:
+ -0.3287 [-0.5761, -0.0814]
+
+Heterogeneity variance (tau^2):
+ 0.0700
+
+> 
+> # Partlett-Riley prediction interval (Sidik and Jonkman's SE)
+> pima(sbp$y, sbp$sigmak, method = "SJ")
+
+Prediction Interval for Random-Effects Meta-Analysis
+
+Partlett-Riley prediction interval
+ Heterogeneity variance: REML
+ SE for average treatment effect: Sidik-Jonkman
+
+Average treatment effect [95%PI]:
+ -0.3287 [-0.9835, 0.3261]
+
+Average treatment effect [95%CI]:
+ -0.3287 [-0.5625, -0.0950]
+
+Heterogeneity variance (tau^2):
+ 0.0700
 ```
